--- a/Python/Pre-processing/pre-process.ipynb
+++ b/Python/Pre-processing/pre-process.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "import pandas as pd"
    ]
   },
